UI: Polish result icons and add model accuracy to prediction modal

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -149,6 +149,11 @@
                         </div>
                     </div>
 
+                    <div class="text-secondary small mb-4">
+                        <i class="fa-solid fa-microchip me-1"></i> Model Overall Accuracy: <span
+                            class="fw-bold">73.2%</span>
+                    </div>
+
                     <button type="button" class="btn btn-outline-light rounded-pill px-5" data-bs-dismiss="modal">Close
                         Workspace</button>
                 </div>
